css/index.css
* {
    margin: 0;
    padding: 0; 
    font-family: sans-serif;
}

body {
    background: rgb(34, 34, 34);
    color: white;
    font-family: sans-serif;
    animation: fadeInAnimation ease-in 0.7s;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
    overflow-x: hidden;
}

@keyframes fadeInAnimation {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

.container a {
    color: lightblue;
    text-decoration: none;
}

@media (min-width: 825px) {
.active1 {
    color: black;
    background-color: rgb(41, 176, 221);
}

    #selfhelp {
        width: 825px;
        margin-left: auto;
        margin-right: auto;
    }

    a:hover {
        transform: scale(1.1);
    }

 
    
    .nav {
        background-color: rgb(14, 172, 53);
        overflow: hidden;
        position: fixed;
        width: 100%;
        display: flex;
    }
    
    li {
        float: left;
    }
    
    ul {
        list-style-type: none;
        margin: 0;
        padding: 0;
        overflow: hidden;
    
    }
    
    .logo {
        display: none;
    }

    .nav li {
        display: inline;
    }
    
    
    .nav a {
        color: white;
        font-size: 18px;
        text-decoration: none;
        display: block; 
        text-align: center;
        padding: 24px 26px;
    }

    p {
        font-size: 20px;
    }
    
    #vnav {
        display: none;
    }

    h1 {
        font-size: 72px;
        text-align: center;
    }
    
    h2 {
        text-align: center;
        font-size: 32px;
    }
    
    .active {
        background: blue;
    }
    
    .home {
        animation-name: fadeaway;
        animation-duration: 4;
        animation-fill-mode: forwards;
    }
    
    .container {
        text-align: left;
        width: 825px;
        margin: 0 auto;
    }

}

@media (max-width: 824px) {
    #navigationtoggle div {

        width: 35px;
        height: 5px;
        background-color: white;
        margin: 6px 0;
        }

        #navigationtoggle2 div {

            width: 35px;
            height: 5px;
            background-color: white;
            margin: 6px 0;
            }
  
        #navigationtoggle div:hover {
          cursor: pointer;
        }

    .logo {
        display: block;
        background-color: rgb(14, 172, 53);
    }

    img {
        width: 100px;
        height: 100px;
    }

    #vnav {
        display: none;
    }

    div#selfhelp {
        width: 100%;
    }

    h1 {
        text-align: center;
        font-size: 48px;
    }

    h2 {
        text-align: center;
        font-size: 32px;
    }

    body {
        width: 100%;
        flex-wrap: nowrap;
        overflow-x: hidden;
    }

    ul {
        overflow-x: hidden;
        background-color: rgb(14, 172, 53);
        list-style-type: none;
        margin: 0;
        padding: 0;
    }

    #nav {
        display: none;
    }

    li a {
        color: white;
        text-decoration: none;
        font-family: sans-serif;
        display: block;
        width: 100%;
        padding: 8px 36px;
      }
}

@keyframes fadeaway {
    0% {
        opacity: 100%;
    }

    25% {
        opacity: 75%;
    }

    50% {
        opacity: 50%;
    }

    75% {
        opacity: 25%;
    }

    100% {
        opacity: 0%;
    }
}

#light {
    font-size: 32px;
    size: 12px;
    font-family: sans-serif;
    background-color: gray;
    color: white;
}

#light:hover {
    cursor: pointer;
    color: black;
}

.LightDarkToggle {
    background: white;
    color: black;
}

#kbimg {
    float: left;
    width: 200px;
    height: 200px;
}

.image {
    flex-basis: 20%;
    max-width: 100%;
}

#kbvideos p {
    text-align: center;
}

#kbvideos h2 {
    text-align: left;
}

ol {
    display: flex;
}

.sj89i {
    text-align: left;
}



.grow {
    transition: all 0.5s;

}





#title {
    text-align: center;
}



.nav .icon {
display: none;
}

.LightDarkToggle li a {
    color: black;
}

.LightDarkToggle .container a {
    color: blue;
}

.active1 {
    padding: 10px 10px;
}

.LightDarkToggle #nav {
    background-color: rgb(175, 175, 175);
}

#logo {
    width: 100px;
    height: 100px;
  }

  #header-main {
    background-color: rgb(17, 148, 50);
    padding-top: 180px;
    padding-bottom: 180px; 
  }

  #join-text {
    font-size: 25px;
    font-family: sans-serif;
    color: white;
    border: 1px solid white;
    padding: 10px;
    transition: all .2s ease-in; 
    border-radius: 25px;
  }

  li {
    list-style-type: none;
  }

  @media (min-width: 1000px) {
    #join-text {
        padding: 12px 45px
    }
}

#join-text:hover {
    background-color: rgb(44, 44, 44);
    border: 1px solid black;
}

#join-text:active {
    background-color:rgb(0, 0, 0);
}

@media (min-width: 825px) {
.button-container {
    width: 825px;
}  
}

.navappear {
    display: none;
}

.-widget-wrap {
    background-color: #1b1b1b;
    padding: 10px 30px;
}

